force-app/main/default/objects/FS_Execution_Plan__c/FS_Execution_Plan__c.object-meta.xml
<CustomObject>
    <description>FS Execution Plan</description>
    <label>Execution Plan</label>
    <nameField>
        <label>Execution Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Execution Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>