force-app/main/default/objects/FS_Execution_Plan__c/fields/Cup_Name_4__c.field-meta.xml
<CustomField>
    <fullName>Cup_Name_4__c</fullName>
    <label>Cup Name 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>