force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_7000_Series_Dispenser_Location_Serial__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Dispenser_Location_Serial__c</fullName>
    <label>7000 Series Location/Serial# (if known)</label>
    <type>TextArea</type>
</CustomField>