force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Activity_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Activity_Comments__c</fullName>
    <label>Activity Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>