force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Activity_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Activity_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Complete</label>
    <type>Checkbox</type>
</CustomField>