force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_All_Units_Removed__c.field-meta.xml
<CustomField>
    <fullName>FS_All_Units_Removed__c</fullName>
    <label>All Units Removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>