force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_AllInitial_Cartridge_Orders_Processed__c.field-meta.xml
<CustomField>
    <fullName>FS_AllInitial_Cartridge_Orders_Processed__c</fullName>
    <formula>FS_of_Initial_Order_Processed__c  = FS_of_Installations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Initial Cartridge Orders Processed (</label>
    <type>Checkbox</type>
</CustomField>