force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_AllInstallation_Ready_for_PM_approval__c.field-meta.xml
<CustomField>
    <fullName>FS_AllInstallation_Ready_for_PM_approval__c</fullName>
    <description>it will become TRUE when all installations sent for PM Approval</description>
    <formula>IF( AND(FS_of_Installations__c&gt;0,(FS_Installations_ready_for_PM_approval__c + FS_of_Installations_Cancelled__c)  = FS_of_Installations__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Installations Ready for PM approval</label>
    <type>Checkbox</type>
</CustomField>