force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Approvers_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Approvers_Name__c</fullName>
    <label>Approvers Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>