force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Are_cabinets_getting_relocated__c.field-meta.xml
<CustomField>
    <fullName>FS_Are_cabinets_getting_relocated__c</fullName>
    <label>Are cabinets getting relocated?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>