force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Asset_Tracking_Form_AMOA_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_Tracking_Form_AMOA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Tracking Form (AMOA) Complete</label>
    <type>Checkbox</type>
</CustomField>