force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Asset_Tracking_Form_AMOA_Submitted__c.field-meta.xml
<CustomField>
    <fullName>FS_Asset_Tracking_Form_AMOA_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Tracking Form (AMOA) Submitted</label>
    <type>Checkbox</type>
</CustomField>