force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Back_up_COM__c.field-meta.xml
<CustomField>
    <fullName>FS_Back_up_COM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FS_Back_up_COM</description>
    <label>COM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Execution_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>