force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_backroom_ancillary_equipment_getting__c.field-meta.xml
<CustomField>
    <fullName>FS_backroom_ancillary_equipment_getting__c</fullName>
    <label>Is ancillary equipment getting relocated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>