force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_base_cabinet_or_replacement_counter__c.field-meta.xml
<CustomField>
    <fullName>FS_base_cabinet_or_replacement_counter__c</fullName>
    <label>cabinet/replacement counter Install part</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>No, Not at this time</fullName>
            </value>
            <value>
                <fullName>Yes, Self-Serve Only</fullName>
            </value>
            <value>
                <fullName>Yes, Crew Serve Only</fullName>
            </value>
            <value>
                <fullName>Yes, Both Self-Serve and Crew Serve</fullName>
            </value>
            <value>
                <fullName>Unknown â€“ Site assessment will determine</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>