force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Base_Cartridge_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Base_Cartridge_QTY__c</fullName>
    <label>Eq-Base Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>