force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Bypass_functions_Company_Locations__c.field-meta.xml
<CustomField>
    <fullName>FS_Bypass_functions_Company_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass all functions (Company Locations)</label>
    <type>Checkbox</type>
</CustomField>