force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Cancelled_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Cancelled_Comments__c</fullName>
    <label>Cancelled Comments</label>
    <type>TextArea</type>
</CustomField>