force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Cancelled_Reasons__c.field-meta.xml
<CustomField>
    <fullName>FS_Cancelled_Reasons__c</fullName>
    <label>Cancelled Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Cost</fullName>
            </value>
            <value>
                <fullName>Site Prep Cost</fullName>
            </value>
            <value>
                <fullName>Negotiating Contract</fullName>
            </value>
            <value>
                <fullName>Unwilling to pay by Credit Card/Bank Draft</fullName>
            </value>
            <value>
                <fullName>Credit Restrictions</fullName>
            </value>
            <value>
                <fullName>Duplicate EP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>