force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Cartridge_Rack_Only__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Rack_Only__c</fullName>
    <label>Cartridge Rack Only</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46110 : 38&quot; Rack with Cartridge Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>