force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Chain_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Chain_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Execution Plans (Chain Name)</relationshipLabel>
    <relationshipName>Execution_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>