force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_CIF_Header__c.field-meta.xml
<CustomField>
    <fullName>FS_CIF_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CIF Header</label>
    <referenceTo>CIF_Header__c</referenceTo>
    <relationshipLabel>Execution Plans</relationshipLabel>
    <relationshipName>Execution_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>