force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_COM_Authorization_Letter_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_COM_Authorization_Letter_Date_Time__c</fullName>
    <label>COM Authorization Letter Date/Time</label>
    <type>DateTime</type>
</CustomField>