force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Crew_Serve_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>FS_Crew_Serve_Dispenser__c</fullName>
    <label>8000 Series Dispenser</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46102 : Freestyle GS2 Crew Serve</fullName>
            </value>
            <value>
                <fullName>46129 : Freestyle GS2 Crew Serve - Wood Crate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>