force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Customer_Authorization_Letter_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Authorization_Letter_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Authorization Letter #1</label>
    <type>Checkbox</type>
</CustomField>