force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Customer_Ice_Fill_Spec__c.field-meta.xml
<CustomField>
    <fullName>FS_Customer_Ice_Fill_Spec__c</fullName>
    <label>Customer Ice Fill Spec</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/3</fullName>
            </value>
            <value>
                <fullName>1/2</fullName>
            </value>
            <value>
                <fullName>3/4</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>