force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_date_stop_selling__c.field-meta.xml
<CustomField>
    <fullName>FS_date_stop_selling__c</fullName>
    <label>Day outlet stops selling Drinks</label>
    <type>Date</type>
</CustomField>