force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Davaco_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Davaco_Requirements__c</fullName>
    <label>Select Site Assessment Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Davaco: Site Assessment + GFE</fullName>
            </value>
            <value>
                <fullName>Davaco: Site Assessment + Detailed Scope Summary</fullName>
            </value>
            <value>
                <fullName>Davaco: Site Assessment Only</fullName>
            </value>
            <value>
                <fullName>Davaco: New Construction Site Assessment</fullName>
            </value>
            <value>
                <fullName>No Site Assessment Required</fullName>
            </value>
            <value>
                <fullName>Power House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>