force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Days_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>FS_Days_Elapsed__c</fullName>
    <description>Average Days Elapsed</description>
    <formula>if(AND(FS_of_Installations__c &lt;&gt; 0,(FS_of_Installations__c - FS_of_Installations_Cancelled__c) &lt;&gt; 0), (FS_Sum_of_Days_Elapsed__c /  (FS_of_Installations__c - FS_of_Installations_Cancelled__c) ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This represents the average days between when the CIF Disposition under the related CIF&#39;s was converted to  &quot;approved by customer&quot; and the COM requests approval for one or all outlets</inlineHelpText>
    <label>Average Days Elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>