force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Doc__c.field-meta.xml
<CustomField>
    <fullName>FS_Doc__c</fullName>
    <label>Removal Doc #</label>
    <length>64</length>
    <type>Text</type>
</CustomField>