force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Double_Tray_QTY_Case__c.field-meta.xml
<CustomField>
    <fullName>FS_Double_Tray_QTY_Case__c</fullName>
    <formula>IF( ISPICKVAL(FS_Tray_Kit__c, &#39;Single &amp; Double Trays&#39;)  , FS_CS_Dispenser_QTY__c + FS_SS_Dispenser_QTY__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Double Tray QTY/Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>