force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_EP_Preliminary_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_EP_Preliminary_Approval_Date__c</fullName>
    <label>Request for PM approval Updated Date</label>
    <type>DateTime</type>
</CustomField>