force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Equipment_Package_Insert_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Package_Insert_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Placement Insert Check</label>
    <type>Checkbox</type>
</CustomField>