force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Equipment_Placement_Questionnaire_rt__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Placement_Questionnaire_rt__c</fullName>
    <label>Equipment Placement Questionnaire Link</label>
    <length>400</length>
    <type>Html</type>
</CustomField>