force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution__c</fullName>
    <label>Sales Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>