force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Age__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Age__c</fullName>
    <formula>TODAY() -  FS_Execution_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>