force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Completion_Date__c</fullName>
    <label>Execution Completion Date</label>
    <type>Date</type>
</CustomField>