force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Consists_of_20_Outlets__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Consists_of_20_Outlets__c</fullName>
    <formula>FS_of_Installations__c &gt; 19</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Consists of 20+ Outlets ?</label>
    <type>Checkbox</type>
</CustomField>