force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_On_Hold_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_On_Hold_Cancelled__c</fullName>
    <label>Execution On Hold/Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>