force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan__c</fullName>
    <displayFormat>EP-{0000}</displayFormat>
    <label>Execution Plan#</label>
    <type>AutoNumber</type>
</CustomField>