force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Dispenser_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Dispenser_Type__c</fullName>
    <formula>IF( RecordType.Name == &#39;7000 Series&#39;, &#39;7000 Series ONLY&#39;, 
IF(RecordType.Name == &#39;8000 Series&#39;, &#39;CS ONLY&#39;,
IF(RecordType.Name == &#39;9000 Series&#39;, &#39;SS ONLY&#39;,&#39;SS and CS&#39;) ) )</formula>
    <label>Execution Plan Dispenser Type</label>
    <type>Text</type>
</CustomField>