force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Final_Approval_PM__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Final_Approval_PM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execution Plan Final Approval (PM)</label>
    <type>Checkbox</type>
</CustomField>