force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Final_Approval_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Final_Approval_PM_Date__c</fullName>
    <label>Execution Plan Final Approval (PM) Date</label>
    <type>DateTime</type>
</CustomField>