force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Final_Approval_PMCheck__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Final_Approval_PMCheck__c</fullName>
    <description>it will become TRUE when all installations are approved</description>
    <formula>IF( AND(FS_of_Installations__c&gt;0,(FS_Installations_approved_by_PM__c + FS_of_Installations_Cancelled__c) = FS_of_Installations__c) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Execution Plan Final Approval (PM)</label>
    <type>Checkbox</type>
</CustomField>