force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Name__c</fullName>
    <label>Execution Plan Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>