force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Preliminary_Approval__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Preliminary_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for PM approval</label>
    <type>Checkbox</type>
</CustomField>