force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Status__c</fullName>
    <description>Execution Plan Status</description>
    <label>Execution Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <default>true</default>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>