force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Plan_Submitted_to_JCOM_COM__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Submitted_to_JCOM_COM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execution Plan Submitted to JCOM (COM)</label>
    <type>Checkbox</type>
</CustomField>