force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Execution_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Execution Start Date</label>
    <type>Date</type>
</CustomField>