force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_ExecutionPlan_Final_Approval_DateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_ExecutionPlan_Final_Approval_DateTime__c</fullName>
    <label>Final Execution Plan Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>