force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_External_Modem_qty__c.field-meta.xml
<CustomField>
    <fullName>FS_External_Modem_qty__c</fullName>
    <label>External Modems QTY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>