force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_External_Modems__c.field-meta.xml
<CustomField>
    <fullName>FS_External_Modems__c</fullName>
    <label>External Modems</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46299: MultiModem - Verizon</fullName>
            </value>
            <value>
                <fullName>46298: MultiModem - ATT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>