force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_FC_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_FC_Complete__c</fullName>
    <label># FC Complete</label>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Install_Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>