force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_FC_Information_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_FC_Information_Complete__c</fullName>
    <formula>AND(FS_FC_Complete__c =  FS_of_Installations__c  ,
FS_of_Installations__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FC - Information Complete</label>
    <type>Checkbox</type>
</CustomField>