force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_FPS__c.field-meta.xml
<CustomField>
    <fullName>FS_FPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FPS</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS FPS_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS PM_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS Admin PM_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS AC_P</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Execution_Plans4</relationshipName>
    <type>Lookup</type>
</CustomField>