force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Freestyle_7K_Only_Wht_is_dispsr_Confi__c.field-meta.xml
<CustomField>
    <fullName>FS_Freestyle_7K_Only_Wht_is_dispsr_Confi__c</fullName>
    <label>(Freestyle 7K Only) Wht is dispsr Config</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>With 4â€� Legs &amp; Drain Pan</fullName>
            </value>
            <value>
                <fullName>Without 4â€� Legs &amp; Drain Pan</fullName>
            </value>
            <value>
                <fullName>Without 4â€� Legs &amp; Without Drain Pan (i.e., built-in drain trough)</fullName>
            </value>
            <value>
                <fullName>Unknown, site assessment will determine optimum location</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>