force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Freestyle_dispenser_will_go_where__c.field-meta.xml
<CustomField>
    <fullName>FS_Freestyle_dispenser_will_go_where__c</fullName>
    <label>Freestyle dispenser will go where?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>Same space as legacy</fullName>
            </value>
            <value>
                <fullName>To the LEFT of legacy unit</fullName>
            </value>
            <value>
                <fullName>To the RIGHT of legacy unit</fullName>
            </value>
            <value>
                <fullName>New location â€“ Explain in comments</fullName>
            </value>
            <value>
                <fullName>Unknown, consult with customer to determine optimum location</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>