force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Freestyle_Equipment_Placmnt_Diagram_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Freestyle_Equipment_Placmnt_Diagram_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freestyle Equipment Placement Diagram #1</label>
    <type>Checkbox</type>
</CustomField>