force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Frestyle_7k_only_NNS_sweetnr_wil_go_w__c.field-meta.xml
<CustomField>
    <fullName>FS_Frestyle_7k_only_NNS_sweetnr_wil_go_w__c</fullName>
    <label>(Freestyle 7k only) NNS sweetner will go</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>FOH -  Underneath dispenser in cabinet</fullName>
            </value>
            <value>
                <fullName>Unknown â€“ site assessment will determine</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>