force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_FSM_Approver__c.field-meta.xml
<CustomField>
    <fullName>FS_FSM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSM Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Execution_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>